css/launchcircle.css
/* ... */
header .point {
    display: inline-block;
}

.radial-big .point {
    transform: translate(-50%,-50%) rotate(-45deg);
}

.security .point-white,
header .point-white {
    background: white;
    color: black;
    box-shadow: 0 2px 9px 0 rgba(0,0,0,0.15);
}

.security .point-cyan {
    background: #12D4C4;
    color: white;
}

.m-right-width {
    margin-right: -3em;
}

.m-bot-width {
    margin-bottom: -3em;
}

.point-centerX {
    left: 50%;
}

.point-centerY {
    top: 50%;
}

.point-left {
    left: 0;
}

.point-right {
    right: 0;
}

.point-top {
    top: 0;
}

.point-bottom {
    bottom: 0;
}

.point .caption{
    font-weight: 100;
    font-size: 0.9em;
    position: absolute;
    display: inline-block;
    text-align: center;
    color: #363439;
    width: 21ch;
}

.point .caption.caption-med {
    width: 15ch;
}

.point .caption.caption-small {
    width: 11ch;
}

/*-----------------------------
            IE10+ fix
-------------------------------*/
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .point .caption {width:auto !important;}
}

.point .caption.caption-left {
    top: 50%;
    left: -.5em;
    transform: translate(-100%,-50%);
}

.point .caption.caption-right {
    top: 50%;
    right: -.5em;
    transform: translate(100%,-50%);
}

.point .caption.caption-top {
    top: -.5em;
    left: 50%;
    transform: translate(-50%,-100%);
}

.point .caption.caption-bottom {
    bottom: -.5em;
    left: 50%;
    transform: translate(-50%,100%);
}

@media screen and (min-width: 576px) and (max-width:900px) {
    .point .caption.caption-left,
    .point .caption.caption-right {
        background: white;
        top: -.5em;
        left: 50%;
        transform: translate(-50%,-100%);
    }
}

.security .list-view .services-title {
    line-height: 2em;
    font-size: 1.4em;
    margin-bottom: 1.5em;
    background: #898AEA;
    color: white;
    text-align: center;
    border-radius: 10px;
}

/* --------------------------------------
    Difference-Page
-----------------------------------------*/

.card-header.card-transparent .card-header-wraper {
    background: transparent url("/images/map.svg") no-repeat center;
    background-size: 60%;
}

section.difference .advantage-list {
    flex-direction: row;
}

.advantage-list .advantage-item {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    margin-bottom: 3.5em;
}


.advantage-item .icon-container img {
    max-height: 60%;
    margin: 0 auto;
    display: flex;
}

.advantage-item .icon-container {
    width: 30%;
    padding: 0 1.5em;
}

.advantage-item .info-container {
    width: 70%;
    padding-top: .3em;
}

.advantage-item .info-container .title {
    font-size: 1.125em;
}

.advantage-item .info-container p {
    font-size: .8em;
}

.table-advantages th,
.table-advantages td {
    text-align: center;
    vertical-align: middle;
}

.table-advantages tr.row-launchcircle {
    border: 1px solid #eceeef;
    font-weight: bold;
    border-radius: 3px;
    box-shadow: 0 2px 13px 0 rgba(19,36,68,0.07);
}

.table-advantages tbody tr:not(:last-child) {
    border-bottom: 1px solid #eceeef;
}

.table-advantages th {
    border-bottom: 0 !important;
    border-top: 0;
}

.table-advantages td {
    padding: 1.2em 1.5em;
    width: calc(100% / 7);
}

.table-advantages .tb-icon {
    width: 2em;
    height: 2em;
    display: inline-block;
    background-size: contain;
}

.table-advantages .tb-logo {
    background: url("/images/logo.svg") no-repeat;
    background-size: contain;
    padding-top: 1.5em;
}

.tb-icon.icon-accept {
    background-image: url("/images/icon/icon-accept.svg");
}

.tb-icon.icon-decline {
    background-image: url("/images/icon/icon-decline.svg");
}

/* --------------------------------------
    FAQ Page
-----------------------------------------*/

#faqCarousel .slick-slider {
    padding: 5em 0 2em;
    overflow-x: hidden;
}

#faqCarousel .slick-list {
    overflow: visible;
}

#faqCarousel .carousel-card {
    border: 1px solid #F1F1F1;
    background-color: #fff;
    border-radius: 5px;
    padding: 0 2.4em 3em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

#faqCarousel .slick-center .carousel-card {
    background-color: #FAFBFD;
    box-shadow: 0 2px 50px 0 rgba(162,162,162,0.22);
}

#faqCarousel .carousel-card .card-number {
    font-size: 4em;
    color: #ECF0F7;
    font-weight: bold;
    letter-spacing: 2px;
}

#faqCarousel .carousel-card .card-info {
    background-color: transparent;
}

#faqCarousel .carousel-card .card-icon {
    box-shadow: 0 7px 17px 0 rgba(196,206,217,0.29);
    background: white;
    border-radius: 50%;
    padding: 40% 0 0;
    width: 40%;
    overflow: hidden;
    position: absolute;
    transform: translate(-50%,-50%);
    top: 0;
    left: 50%;
}

#faqCarousel .carousel-card .card-icon img {
    max-width: 100%;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
}

#faqCarousel .carousel-control-wraper {
    position: absolute;
    justify-content: center;
    bottom: 0;
    display: flex;
}

@media screen and (min-width: 992px) {
    #faqCarousel .carousel-control-wraper {
        right: 25%;
    }
}

#faqCarousel .carousel-control-wraper .slick-arrow {
    opacity: 0.85;
    background-color: #F4F8FC;
}

.tab-content {
    padding-left: 30px;
    padding-right: 0;
}

.tab-content .card-header,
.tab-content .card div[role="tabpanel"] {
    padding-left: 3em;
}

.tab-content .card.active .card-header a[data-toggle="collapse"]:before,
.tab-content .card .card-header a[data-toggle="collapse"]:before {
    content: '';
    width: 2.5em;
    height: 2.5em;
    position: absolute;
    border-radius: 50%;
    top: 2.3em;
    left: -.5em;
    transform: translate(0,-50%);
    box-shadow: 0 7px 11px 0 rgba(85,134,222,0.09);
}

.tab-content .accordion .card:first-child .card-header a[data-toggle="collapse"]:before {
    top: 1em;
}
/* ... */

